@@ -8,6 +8,11 @@ Under development
 Features added
 --------------
 
+* ``lxml.get_includes()`` returns a list of include paths that can be
+  used to compile external C code against lxml.  This is specifically
+  required for statically linked lxml builds that need to link against
+  the exact same library versions.
+
 * ``Resolver.resolve_file()`` takes an additional option
   ``close_file`` that configures if the file(-like) object will be
   closed after reading or not.  By default, the file will be closed,
